# computer_vision_project

./: .gitignore  README.md  pyproject.toml  requirements-homography.txt  requirements.txt
configs/: default.yaml
scripts/: smoke_test.py  train_all_models.py
src/xg_vision/: __init__.py  config.py  data.py  engine.py  evaluate.py  homography.py  inspect_dataset.py  metrics.py  models.py  predict.py  train.py  train_tabular.py  visualize.py
